--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
         <div class="col"></div>
         <div class="col"></div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
